Fixed issue with panel not taking full width on mobile screens

--- a/src/less/components/panel.less
+++ b/src/less/components/panel.less
@@ -144,5 +144,10 @@
         padding: @panel-footer-padding;
         border-top: 1px solid @panel-default-border-color;
     }
+
+    @media (max-width: @screen-xs-max) {
+        margin-left: -15px;
+        margin-right: -15px;
+    }
 }
 
